# itmoffe_bot_site

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: general_site_config.py  site_example.ini
confirm/: SiteLogger.py  apps.py  models.py  views.py
itmoffe_bot_site/: asgi.py  settings.py  urls.py  wsgi.py
