[tool.poetry]
name = "itmoffe_bot_site"
version = "0.1.0"
description = ""
authors = ["alexanderandreev <sesh_1.0@niuitmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2.9"
requests = "^2.30.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"